9-22-2023

================================
Change log notes
================================

Linux v2.40 | macOS v2.40 | Termux v2.40
I was able to speed up yt-dlp by adding the argument -N4
Added a cache wait time to the Play HD menu of 120 seconds. This should help smooth out the starting of hd videos.

Linux v2.39 | macOS v2.39.1 | Termux v2.39
Fixed macOS Automated installer.

Linux v2.39 | macOS v2.39 | Termux v2.39
macOS version is out of beta now. I got it working as good as it's going to get.
Changed the way cache works on the Play HD menu. Before it was just reading ahead a max size of MB. Now mpv will read ahead for a max 600 seconds up to 2GB. The back cache buffer is set at 256MB.
So this change should decrease the ram usage. Also changed the way cache works on the Play SD menu and Play Bookmark menu and Play Music menu. Now video and music is set to 120 seconds read ahead. 
Changed the Automated install command for macOS version.

Linux v2.38.1 | macOS v0.22.2 | Termux v2.38
Fixed the internal hardware gpu on macOS.

Linux v2.38.1 | macOS v0.22.1 | Termux v2.38
Changed --hwdec=auto-safe to --hwdec=auto on Linux.
This will enable HW gpu even if the GPU is not listed in the safe database.

Changed --hwdec=auto--safe --vo=gpu to --hwdec=auto --vo=libmpv on macOS beta.
The HW gpu was not enabled, now it is.

Linux v2.38 | macOS v0.22 | Termux v2.38
Removed the check to make sure yt-playlist is not loaded before installing yt-playlist. It was just causing too many issues with macOS beta. So I thought I would just remove it from all the installers.

Linux v2.37.2 | macOS v0.21 | Termux v2.37
Updated the Linux auto dependencies.txt file to include:
If you get an error message:
"chmod: cannot access '/usr/bin/yt-dlp': No such file or directory"
Then copy and paste again, yt-dlp did not get downloaded.

Linux v2.37.1 | macOS v0.21 | Termux v2.37
Added support for zsh shell to just press y to load yt-playlist on Linux.

Linux v2.37 | macOS v0.21 | Termux v2.37