@@ -3,10 +3,11 @@
      	if command -v yt-playlist >/dev/null
      	then
         echo "============================"
-     	echo "Linux uninstaller yt-playlist"
+     	echo "macOS uninstaller yt-playlist"
         echo "============================"
      	sudo rm -v /usr/local/bin/yt-playlist
      	rm -v ${HOME}/.config/yt-playlist/input.conf
+     	rm -R -v ${HOME}/.config/yt-playlist/scripts/
      	echo "Not removed '${HOME}/.config/yt-playlist/'"
      	echo "Bookmarks, Music, Favorites and History were not deleted."
         echo "============================"
