@@ -7,6 +7,7 @@
         echo "============================"
      	rm -v /data/data/com.termux/files/usr/bin/yt-playlist
      	rm -v ${HOME}/.config/yt-playlist/input.conf
+     	rm -R -v ${HOME}/.config/yt-playlist/scripts/
         sed -i '/yt-playlist/d' ${HOME}/.bashrc
      	echo "Not removed '${HOME}/.config/yt-playlist/'"
      	echo "Bookmarks, Music, Favorites and History were not deleted."
